# v4g-ingestion

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPORT-NOTES.md  MANIFEST.md  README.md  diag_v4g_filing_date.py  docker-compose.yml  probe_cbso_parsing.py  pyproject.toml  render.yaml
.github/workflows/: test.yml
docs/: LB-005-filing-date-patches.md  W8_DOCTRINE.md  W8_MIGRATION_SPEC.md
sql/: 2026-05-08-LB-008-raw-json-xbrl-cache.sql  GS-MIGRATE-022a.sql
sql/governance/: GS-GOVERNANCE-2026-05-08.sql
sql/migrations/: GS-MIGRATE-021.sql  GS-MIGRATE-022c.sql  GS-MIGRATE-LB-001.sql  GS-MIGRATE-LB-002.sql  GS-MIGRATE-LB-003.sql  GS-MIGRATE-LB-004.sql  W8-EXT-002_analyst_dictionary (1).sql  W8-EXT-002a_fix_workforce_subsections.sql  W8-EXT-002b_split_bad_merged_parties.sql  W8-EXT-002c_fix_code_9086_label.sql
sql/migrations/W8-core/: 001_create_dim_pcmn_codes.sql  (+13 more)
src/: __init__.py
src/canonical/: financials.py
src/cli/: __init__.py  enrich.py  export_financials_xlsx.py  ingest_nbb_zip.py
src/enrichment/: queue.py  runner.py
src/persistence/: financials_writer.py  supabase.py
src/services/: __init__.py  analyst_export.py  excel_export.py  financial_export.py  party_auto_create.py  party_query.py  screening_export.py  zip_ingester.py
src/web/: app.py  auth.py  charts.py
tests/: probe_autopsy.py  probe_nbb_jsonxbrl_full.py  probe_nbb_references.py  repromote_filings.py  test_aggregator.py  test_auth.py  test_nbb_worker.py  test_runner_dispatch.py  test_skeleton.py
tests/services/: test_financial_export.py
tests/unit/: test_nbb_extractor.py
tests/web/: test_charts.py  test_financials_routes.py  test_parties_routes.py
(+21 files in other folders)
