[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v4g-ingestion"
version = "0.1.0"
description = "V4G enrichment platform — unified pipeline for Golden Safe party enrichment"
authors = [{name = "V4G Data Ops"}]
requires-python = ">=3.11"

dependencies = [
    # Web
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    # HTTP
    "httpx>=0.27.0",
    "requests>=2.31.0",
    # Data
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "pydantic>=2.5.0",
    # Supabase
    "supabase>=2.3.0,<2.30",     # 2.30 trekt pyiceberg+MSVC requirement aan
    # Utils
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
 ]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
# Treat `src.*` as first-party so isort groups them together even when
# ruff is run outside an editable-installed environment (e.g. local dev
# without `pip install -e .`). This matches CI behavior where the package
# IS installed, avoiding lint drift between local and CI.
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
